src/objects/TR1__Activate_Triggers__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Turn on and off Triggers</description>
    <fields>
        <fullName>TR1__CandidateAvailabilityTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Turn On/Off CandidateAvailabilityTrigger</description>
        <label>CandidateAvailabilityTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__ClosingReportScheduleUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Turn On/Off ClosingReportScheduleUpdate</description>
        <label>ClosingReportScheduleUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__ClosingReportTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Turn On/Off ClosingReportTrigger</description>
        <label>ClosingReportTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__TimesheetDetailTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Turn On/Off TimesheetDetailTrigger</description>
        <label>TimesheetDetailTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__VacancyD2DTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Turn On/Off VacancyD2DTrigger</description>
        <label>VacancyD2DTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__VacancyTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Turn On/Off VacancyTrigger</description>
        <label>VacancyTrigger</label>
        <type>Checkbox</type>
    </fields>
    <label>Activate Triggers</label>
</CustomObject>